# DockFlow

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  인수인계.md
.githooks/: pre-commit
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/agent/: model_router.py  orchestrator.py
backend/agent/prompts/: __init__.py  system.py
backend/agent/tools/: __init__.py  excel_tool.py  pdf_tool.py  ppt_tool.py  search_tool.py  slide_tool.py  word_tool.py
backend/api/middleware/: auth.py
backend/api/routes/: announcements.py  approvals.py  documents.py  files.py  generate.py  health.py  slides.py  workflows.py
backend/core/: config.py  exceptions.py
backend/crawler/: __init__.py  collector.py
backend/document/: __init__.py  excel_engine.py  pdf_engine.py  ppt_engine.py  word_engine.py
backend/models/: request.py  response.py
backend/pipeline/: __init__.py  analyzer.py
backend/rag/: __init__.py  chunker.py  embedder.py  store.py
backend/slides/: engine.py  export.py
backend/slides/templates/: base.html  content.html  cover.html  two_col.html
backend/slides/themes/: executive.json  government.json  minimal.json  modern_dark.json
backend/templates/html/: lease_contract.html
backend/tests/: test_engines.py  test_tools.py
files/: .env.example  .gitignore  ANTIGRAVITY_PROMPTS.md  API.md  ARCHITECTURE.md  CLAUDE.md  README.md  REDESIGN_PLAN.md  SKILLS.md  SLIDE_EDITOR_BUILD.md  TASKS.md  WORKFLOWS.md  init.sh  settings.json
frontend/: AGENTS.md  next.config.ts  package-lock.json  package.json
scripts/: install-hooks.sh  validate.sh
(+39 files in other folders)
